<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.relativelayoutmaterial.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    >

    <!-- Usamos app:srcCompat porque tiene soporte de imágenes vectoriales -->
    <ImageView
        android:id="@+id/imgCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/contentImgCity"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imgFav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/malaga"
        />
    <ImageView
        android:id="@+id/imgFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/contentImgFav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@android:drawable/btn_star_big_off"
        />
    <TextView
        android:id="@+id/txvMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/txvMonument"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCity"
        />
    <TextView
        android:id="@+id/txvDateVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/txvDateVisit"
        app:layout_constraintStart_toStartOf="@+id/txvMonument"
        app:layout_constraintTop_toBottomOf="@+id/txvMonument"
        />
    <EditText
        android:id="@+id/edtDateVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/txvDateVisit"
        app:layout_constraintStart_toEndOf="@+id/txvDateVisit"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        />
    <TextView
        android:id="@+id/txvTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txvTypeVisit"
        app:layout_constraintStart_toStartOf="@+id/txvDateVisit"
        app:layout_constraintTop_toBottomOf="@+id/txvDateVisit"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintRight_creator="1"
        />
    <EditText
        android:id="@+id/edtTypeVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintBaseline_toBaselineOf="@+id/txvTypeVisit"
        app:layout_constraintStart_toStartOf="@+id/edtDateVisit"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        />
    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnBuy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btnReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnReservation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuy"
        />

</android.support.constraint.ConstraintLayout>
